# test_workmate

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: stats1.csv  stats2.csv
src/: loader.py  reports.py
tests/: conftest.py  test_app.py  test_loader.py  test_reports.py
